namespace netsysacad.Models {
    public enum TipoDocumento 
    {
        DNI,
        LibretaCivica,
        LibretaEnrolamiento,
        Pasaporte
    }

}

